Fix chat shadow overflow cut

--- a/src/styles/components/chat.scss
+++ b/src/styles/components/chat.scss
@@ -106,7 +106,7 @@
         }
 
         &:focus {
-            box-shadow: 0 0 1rem 1rem rgba($color-purple, 0.1);
+            box-shadow: inset 0 0 1rem .2rem rgba($color-purple, 0.15);
         }
     }
 
